Fixed  insert to BBDD

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 # SERVIDORES
-SQL_SERVER=tcp:10.0.0.140,1433
+SQL_SERVER = "10.0.0.140\\DESARROLLO,59017"
+# SQL_SERVER = "10.0.0.140,1433"
 
 # BASES DE DATOS
 SQL_DATABASE = 'G3'                   
